nginx/nginx-ingress-counter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-counter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /counter
        pathType: Prefix
        backend:
          service:
            name: nginx-counter
            port:
              number: 80
